test/expected/declare_swt.out
declare x as signed wchar_t
        ^
9: error: "signed wchar_t" is illegal for built-in type
